Update execution counts and add output for route difference calculations in notebook

--- a/notebooks/verschil_routes.ipynb
+++ b/notebooks/verschil_routes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "556e664c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0e20242c",
    "metadata": {},
    "outputs": [],
@@ -76,10 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6a59f622",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between route1 and route2 (should be 0): 0.0\n",
+      "Difference between route1 and route3: 18.103356489916877\n",
+      "Difference between route1 and route4: 397.78940966642745\n",
+      "Difference between route3 and route4: 404.47223894677626\n"
+     ]
+    }
+   ],
    "source": [
     "## example routes\n",
     "\n",
@@ -129,6 +140,26 @@
     "        \"route_id\": 1,\n",
     "        \"latitude\": 0.5658256717628067,\n",
     "        \"longitude\": 0.22186827030293746\n",
+    "    },\n",
+    "    {\n",
+    "        \"route_id\": 2,\n",
+    "        \"latitude\": 0.57,\n",
+    "        \"longitude\": 0.23\n",
+    "    },\n",
+    "    {\n",
+    "        \"route_id\": 3,\n",
+    "        \"latitude\": 0.58,\n",
+    "        \"longitude\": 0.24\n",
+    "    },\n",
+    "    {\n",
+    "        \"route_id\": 4,\n",
+    "        \"latitude\": 0.59,\n",
+    "        \"longitude\": 0.25\n",
+    "    },\n",
+    "    {\n",
+    "        \"route_id\": 5,\n",
+    "        \"latitude\": 0.60,\n",
+    "        \"longitude\": 0.26\n",
     "    }\n",
     "]\n",
     "\n",
