Refactor notebook paths

--- a/notebooks/create_locations.ipynb
+++ b/notebooks/create_locations.ipynb
@@ -10,65 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "eb3e5123",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9d53d6b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       configuration  task_id  latitude  longitude                 from  \\\n",
-      "0     CreateSequence    65547  0.648395   0.307167  2022-05-31T08:00:00   \n",
-      "1     CreateSequence    65483  0.646775   0.308146  2022-05-31T07:30:00   \n",
-      "2     CreateSequence    65476  0.642500   0.310977  2022-05-31T07:30:00   \n",
-      "3     CreateSequence    65477  0.649220   0.300745  2022-05-31T07:30:00   \n",
-      "4     CreateSequence    65478  0.642850   0.304187  2022-05-31T07:30:00   \n",
-      "...              ...      ...       ...        ...                  ...   \n",
-      "1799   AddToSequence      143  0.636873   0.306125  2022-05-31T07:30:00   \n",
-      "1800   AddToSequence      144  0.636873   0.306125  2022-05-31T07:30:00   \n",
-      "1801   AddToSequence      155  0.648065   0.301981  2022-05-31T12:00:00   \n",
-      "1802   AddToSequence      156  0.648065   0.301981  2022-05-31T12:00:00   \n",
-      "1803   AddToSequence      157  0.649099   0.304113  2022-05-31T12:00:00   \n",
-      "\n",
-      "                    until  \n",
-      "0     2022-05-31T17:00:00  \n",
-      "1     2022-05-31T23:59:00  \n",
-      "2     2022-05-31T23:59:00  \n",
-      "3     2022-05-31T23:59:00  \n",
-      "4     2022-05-31T23:59:00  \n",
-      "...                   ...  \n",
-      "1799  2022-05-31T23:59:00  \n",
-      "1800  2022-05-31T23:59:00  \n",
-      "1801  2022-05-31T17:00:00  \n",
-      "1802  2022-05-31T17:00:00  \n",
-      "1803  2022-05-31T17:00:00  \n",
-      "\n",
-      "[1804 rows x 6 columns]\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1804 entries, 0 to 1803\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   configuration  1804 non-null   object \n",
-      " 1   task_id        1804 non-null   int64  \n",
-      " 2   latitude       1804 non-null   float64\n",
-      " 3   longitude      1804 non-null   float64\n",
-      " 4   from           1804 non-null   object \n",
-      " 5   until          1804 non-null   object \n",
-      "dtypes: float64(2), int64(1), object(3)\n",
-      "memory usage: 84.7+ KB\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import json\n",
     "import pandas as pd\n",
     "\n",
     "\n",
-    "path_request = \"/home/pascal/Documenten/Syntra/Data Scientist/opdracht_transport/data/requests/0521_301-20220531\"\n",
+    "path_request = \"../data/requests/0521_301-20220531\"\n",
     "requests = Path(path_request)\n",
     "files = sorted(requests.iterdir(), key=lambda x: x.name)\n",
     "rows = []\n",
@@ -103,18 +63,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9822812c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distance: 209.67 m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from geopy.distance import geodesic\n",
     "\n",
@@ -139,28 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4749f564",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      task_id  latitude  longitude location_id\n",
-      "1794      110  0.641092   0.305176     LOC_098\n",
-      "1795      109  0.640913   0.305728     LOC_104\n",
-      "1796      108  0.640778   0.305955     LOC_117\n",
-      "1797      107  0.640991   0.306125     LOC_023\n",
-      "1798      106  0.640979   0.306348     LOC_078\n",
-      "1799      143  0.636873   0.306125     LOC_095\n",
-      "1800      144  0.636873   0.306125     LOC_095\n",
-      "1801      155  0.648065   0.301981     LOC_062\n",
-      "1802      156  0.648065   0.301981     LOC_062\n",
-      "1803      157  0.649099   0.304113     LOC_057\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from geopy.point import Point\n",
@@ -195,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataScientist",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -209,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
