--- a/notebooks/visualisatie_route.ipynb
+++ b/notebooks/visualisatie_route.ipynb
@@ -372,7 +372,7 @@
     "start1 = time()\n",
     "\n",
     "visualize_first_and_second_last(\n",
-    "    data_dir=r\"C:\\Users\\dirk1\\0.SYNTRA1\\syntra_ds1\\Playground1\\opdracht_transport\\learning_driver_preferences\\data\",\n",
+    "    data_dir=r\"../data\",\n",
     "    route_prefix=\"0521_301\",\n",
     "    date_str=\"20220614\",\n",
     ")\n",
@@ -704,7 +704,7 @@
     "start1 = time()\n",
     "\n",
     "_ = run_visualization(\n",
-    "    data_dir=r\"C:\\Users\\dirk1\\0.SYNTRA1\\syntra_ds1\\Playground1\\opdracht_transport\\learning_driver_preferences\\data\",\n",
+    "    data_dir=r\"../data\",\n",
     "    route_prefix=\"0521_301\",\n",
     "    yyyymmdd=\"20220614\",\n",
     "    #save_gif=False,\n",
@@ -724,9 +724,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.10(syntra_ds1)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "syntra_ds1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -738,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
